[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfx-locust"
version = "0.1.0"
description = "Locust wrapper for performance testing platform integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PerfX Team"}
]
keywords = ["locust", "performance", "testing", "load-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "locust>=2.20.0",
    "click>=8.0.0",
    "httpx>=0.25.0",
    "influxdb-client>=1.38.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
perfx = "perfx_locust.cli:main"

[project.urls]
Homepage = "https://g.hz.netease.com/CloudQA/perfx-locust"
Documentation = "https://g.hz.netease.com/CloudQA/perfx-locust#readme"
Repository = "https://g.hz.netease.com/CloudQA/perfx-locust"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perfx_locust = ["py.typed"]
